[project]
name = "keylocker"
version = "0.4.2" # Убедитесь, что версия актуальна
description = "Инструмент CLI и библиотека для управления секретами в YAML файлах с шифрованием." # Описание обновлено
readme = "README.md"
license = { text = "MIT" } 
authors = [
    { name = "vpuhoff", email = "vpuhoff@live.ru" }
]
requires-python = ">=3.10" # Явно указываем поддержку Python
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta", # Примерный статус
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [] 

# Стандартная секция для определения скриптов/точек входа
[project.scripts]
keylocker = "keylocker:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
